更新 三方来源  模板信息 以及提示语

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -597,6 +597,7 @@
   "Failed to obtain authorization information.": "Die Erfassung der Autorisierungsinformationen ist fehlgeschlagen.",
   "Authorization failed!": "Die Autorisierung ist fehlgeschlagen!",
   "Please log in to the third party of the platform to confirm the authorization.": "Bitte melden Sie sich bei der Drittpartei der Plattform an, um die Autorisierung zu bestätigen.",
+  "Please open the mobile app and approve the transaction request.": "Bitte öffnen Sie die mobile App und genehmigen Sie die Transaktionsanfrage.",
   "Wallet Address": "Wallet-Adresse",
   "Wallet Balance": "Wallet-Saldo",
   "Transfer": "Überweisung",
@@ -643,6 +644,7 @@
   "Done...": "Erledigt...",
   "You have received 100 DGC points !": "Sie haben 100 DGC-Punkte erhalten!",
   "Failed to received reward": "Es ist nicht möglich, die Belohnung zu erhalten.",
+  "Clockin rewards can only be obtained once within a 24-hour period，you can try later. ": "Die Anmeldeprämien können nur einmal innerhalb eines Zeitraums von 24 Stunden erhalten werden. Sie können es später nochmal versuchen.",
   "You Rewards History not found": "Ihre Belohnungsgeschichte wurde nicht gefunden.",
   "Try again": "Versuchen Sie es erneut",
   "Time expired, try again": "Die Zeit ist abgelaufen, versuchen Sie es erneut",
@@ -671,7 +673,7 @@
   "Singapore": "Singapur",
   "Korea": "Korea",
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Wenn ein Zugriffsknoten in einer bestimmten Region platziert ist, verbindet er sich standardmäßig vorzugsweise mit GPU-Computeknoten innerhalb derselben Region, wodurch die Latenz reduziert und die Leistung gesteigert wird.",
-  "Download DeGPTto obtain rewards": "DeGPT herunterladen, um Belohnungen zu erhalten.",
+  "Download DeGPT to obtain rewards": "DeGPT herunterladen, um Belohnungen zu erhalten.",
   "Switch Models": "Modellwechsel",
   "Suitable for most tasks": "Für die meisten Aufgaben geeignet",
   "Support image recognition": "Unterstützung der Bilderkennung",
