--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -597,6 +597,7 @@
   "Failed to obtain authorization information.": "No se pudo obtener la información de autorización.",
   "Authorization failed!": "¡La autorización ha fallado!",
   "Please log in to the third party of the platform to confirm the authorization.": "Por favor, inicie sesión en la tercera parte de la plataforma para confirmar la autorización.",
+  "Please open the mobile app and approve the transaction request.": "Por favor, abra la aplicación móvil y apruebe la solicitud de transacción.",
   "Wallet Address": "Dirección de la billetera",
   "Wallet Balance": "Saldo de la billetera",
   "Transfer": "Transferencia",
@@ -643,6 +644,7 @@
   "Done...": "Hecho...",
   "You have received 100 DGC points !": "Has recibido 100 puntos DGC!",
   "Failed to received reward": "No se logró recibir la recompensa.",
+  "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Las recompensas de clockin solo se pueden obtener una vez en un período de 24 horas. Puedes intentarlo más tarde.",
   "You Rewards History not found": "No se ha encontrado el historial de tus recompensas.",
   "Try again": "Inténtalo de nuevo",
   "Time expired, try again": "Se ha agotado el tiempo, inténtalo de nuevo",
@@ -671,7 +673,7 @@
   "Singapore": "Singapur",
   "Korea": "Corea",
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Cuando un nodo de acceso se encuentra en una región específica, se conectará de forma preferente por defecto a los nodos de computación GPU de la misma región, reduciendo la latencia y mejorando el rendimiento.",
-  "Download DeGPTto obtain rewards": "Descarga DeGPT para obtener recompensas.",
+  "Download DeGPT to obtain rewards": "Descarga DeGPT para obtener recompensas.",
   "Switch Models": "Cambiar modelos",
   "Suitable for most tasks": "Adecuado para la mayoría de las tareas",
   "Support image recognition": "Soporte para el reconocimiento de imágenes",
