--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -596,6 +596,7 @@
   "Failed to obtain authorization information.": "Impossible d'obtenir les informations d'autorisation.",
   "Authorization failed!": "L'autorisation a échoué!",
   "Please log in to the third party of the platform to confirm the authorization.": "Veuillez vous connecter au tiers de la plateforme pour confirmer l'autorisation.",
+  "Please open the mobile app and approve the transaction request.": "Veuillez ouvrir l'application mobile et approuver la demande de transaction.",
   "Wallet Address": "Adresse du portefeuille",
   "Wallet Balance": "Solde du portefeuille",
   "Transfer": "Transfert",
@@ -642,6 +643,7 @@
   "Done...": "Fait...",
   "You have received 100 DGC points !": "Vous avez reçu 100 points DGC!",
   "Failed to received reward": "Échec de la réception de la récompense",
+  "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Les récompenses de clockin ne peuvent être obtenues qu'une seule fois dans une période de 24 heures. Vous pouvez essayer plus tard.",
   "You Rewards History not found": "Aucune historique de vos récompenses n'a été trouvée.",
   "Try again": "Essaye encore",
   "Time expired, try again": "Le temps est écoulé, essaie encore",
@@ -670,7 +672,7 @@
   "Singapore": "Singapour",
   "Korea": "Corée",
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Lorsqu'un nœud d'accès est situé dans une région spécifique, il se connectera par défaut de manière préférentielle aux nœuds de calcul GPU de la même région, réduisant la latence et améliorant les performances.",
-  "Download DeGPTto obtain rewards": "Téléchargez DeGPT pour obtenir des récompenses.",
+  "Download DeGPT to obtain rewards": "Téléchargez DeGPT pour obtenir des récompenses.",
   "Switch Models": "Changer de modèles",
   "Suitable for most tasks": "Adapté à la plupart des tâches",
   "Support image recognition": "Prise en charge de la reconnaissance d'images",
