--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -597,6 +597,7 @@
   "Failed to obtain authorization information.": "Gagal mendapatkan informasi otorisasi.",
   "Authorization failed!": "Otorisasi gagal!",
   "Please log in to the third party of the platform to confirm the authorization.": "Silakan masuk ke pihak ketiga dari platform untuk mengkonfirmasi otorisasi.",
+  "Please open the mobile app and approve the transaction request.": "Silakan buka aplikasi mobile dan setujui permintaan transaksi.",
   "Wallet Address": "Alamat Dompet",
   "Wallet Balance": "Saldo Dompet",
   "Transfer": "Transfer",
@@ -643,6 +644,7 @@
   "Done...": "Selesai...",
   "You have received 100 DGC points !": "Anda telah menerima 100 poin DGC!",
   "Failed to received reward": "Gagal menerima hadiah.",
+  "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Hadiah clockin hanya bisa diperoleh sekali dalam jangka waktu 24 jam, Anda bisa mencobanya lagi nanti.",
   "You Rewards History not found": "Riwayat hadiah Anda tidak ditemukan.",
   "Try again": "Coba lagi",
   "Time expired, try again": "Waktu telah habis, coba lagi",
@@ -671,7 +673,7 @@
   "Singapore": "Singapura",
   "Korea": "Korea",
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Ketika sebuah node akses berada di suatu wilayah tertentu, secara default akan lebih dahulu terhubung ke node komputasi GPU di wilayah yang sama, sehingga mengurangi latensi dan meningkatkan kinerja.",
-  "Download DeGPTto obtain rewards": "Unduh DeGPT untuk mendapatkan hadiah.",
+  "Download DeGPT to obtain rewards": "Unduh DeGPT untuk mendapatkan hadiah.",
   "Switch Models": "Ganti model",
   "Suitable for most tasks": "Cocok untuk sebagian besar tugas",
   "Support image recognition": "Mendukung pengenalan gambar",
