--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -599,6 +599,7 @@
   "Failed to obtain authorization information.": "認証情報の取得に失敗しました。",
   "Authorization failed!": "認証に失敗しました！",
   "Please log in to the third party of the platform to confirm the authorization.": "プラットフォームのサードパーティにログインして、認可を確認してください。",
+  "Please open the mobile app and approve the transaction request.": "モバイルアプリを開いて取引リクエストを承認してください。",
   "Wallet Address": "ウォレットアドレス",
   "Wallet Balance": "ウォレット残高",
   "Transfer": "送金",
@@ -643,6 +644,7 @@
   "Done...": "かんせい...",
   "You have received 100 DGC points !": "あなたは 100 の DGC ポイントを受け取りました！",
   "Failed to received reward": "報酬を受け取ることができませんでした。",
+  "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "クロックインの報酬は 24 時間以内に 1 回だけ取得でき、後で試してみることができます。",
   "You Rewards History not found": "あなたの報酬履歴が見つかりません。",
   "Try again": "もう一度試してください",
   "Time expired, try again": "時間が切れました。もう一度試してください",
@@ -671,7 +673,7 @@
   "Singapore": "シンガポール",
   "Korea": "韓国",
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "アクセスノードが特定の地域に位置する場合、デフォルトでは同じ地域の GPU コンピューティングノードに優先的に接続し、遅延を低減し、性能を向上させます。",
-  "Download DeGPTto obtain rewards": "報酬を得るために DeGPT をダウンロードしてください。",
+  "Download DeGPT to obtain rewards": "報酬を得るために DeGPT をダウンロードしてください。",
   "Switch Models": "モデルを切り替える",
   "Suitable for most tasks": "多くのタスクに適しています",
   "Support image recognition": "画像認識をサポートしています",
