--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -597,6 +597,7 @@
   "Failed to obtain authorization information.": "인증 정보를 가져오는데 실패했습니다.",
   "Authorization failed!": "인증에 실패했습니다!",
   "Please log in to the third party of the platform to confirm the authorization.": "플랫폼의 제3자에 로그인하여 권한 승인을 확인하세요.",
+  "Please open the mobile app and approve the transaction request.": "모바일 앱을 열고 거래 요청을 승인해 주세요.",
   "Wallet Address": "지갑 주소",
   "Wallet Balance": "지갑 잔액",
   "Transfer": "이체",
@@ -643,6 +644,7 @@
   "Done...": "완료...",
   "You have received 100 DGC points !": "100개의 DGC 포인트를 받았습니다!",
   "Failed to received reward": "보상 수령에 실패했습니다.",
+  "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "클록인 보상은 24시간 동안 한 번만 받을 수 있으며 나중에 시도해 보실 수 있습니다.",
   "You Rewards History not found": "보상 기록이 발견되지 않습니다.",
   "Try again": "다시 시도해 보세요",
   "Time expired, try again": "시간이 만료되었습니다. 다시 시도해 보세요",
@@ -671,7 +673,7 @@
   "Singapore": "싱가포르",
   "Korea": "한국",
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "접속 노드가 특정 지역에 위치할 때, 기본적으로 동일 지역의 GPU 계산 노드에 우선적으로 연결되어 지연을 줄이고 성능을 향상시킵니다.",
-  "Download DeGPTto obtain rewards": "보상을 받기 위해 DeGPT를 다운로드하세요.",
+  "Download DeGPT to obtain rewards": "보상을 받기 위해 DeGPT를 다운로드하세요.",
   "Switch Models": "모델 전환",
   "Suitable for most tasks": "대부분의 작업에 적합합니다",
   "Support image recognition": "이미지 인식을 지원합니다",
