--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -596,6 +596,7 @@
   "Failed to obtain authorization information.": "Не удалось получить информацию об авторизации.",
   "Authorization failed!": "Авторизация не удалась!",
   "Please log in to the third party of the platform to confirm the authorization.": "Пожалуйста, войдите на третью сторону платформы для подтверждения авторизации.",
+  "Please open the mobile app and approve the transaction request.": "Пожалуйста, откройте мобильное приложение и одобрите запрос на транзакцию.",
   "Wallet Address": "Адрес кошелька",
   "Wallet Balance": "Баланс кошелька",
   "Transfer": "Перевод",
@@ -642,6 +643,7 @@
   "Done...": "Выполнено...",
   "You have received 100 DGC points !": "Вы получили 100 баллов DGC!",
   "Failed to received reward": "Не удалось получить награду.",
+  "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Награда за регистрацию может быть получена только один раз в течение 24-часового периода. Вы можете попробовать позже.",
   "You Rewards History not found": "История ваших наград не найдена.",
   "Try again": "Попробуйте еще раз",
   "Time expired, try again": "Время истекло, попробуйте еще раз",
@@ -670,7 +672,7 @@
   "Singapore": "Сингапур",
   "Korea": "Корея",
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Когда узел доступа находится в определенной области, по умолчанию он предпочтительно подключается к узлам вычислений на GPU в той же области, снижая задержку и повышая производительность.",
-  "Download DeGPTto obtain rewards": "Загрузите DeGPT для получения вознаграждений.",
+  "Download DeGPT to obtain rewards": "Загрузите DeGPT для получения вознаграждений.",
   "Switch Models": "Переключить модели",
   "Suitable for most tasks": "Подходит для большинства задач",
   "Support image recognition": "Поддерживает распознавание изображений",
