--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -597,6 +597,7 @@
   "Failed to obtain authorization information.": "Yetkilendirme bilgilerini alamadık.",
   "Authorization failed!": "Yetkilendirme başarısız oldu!",
   "Please log in to the third party of the platform to confirm the authorization.": "Lütfen platformun üçüncü tarafına giriş yaparak yetkilendirmeyi onaylayın.",
+  "Please open the mobile app and approve the transaction request.": "Lütfen mobil uygulamayı açın ve işlem isteğini onaylayın.",
   "Wallet Address": "Cüzdan Adresi",
   "Wallet Balance": "Cüzdan Bakiyesi",
   "Transfer": "Transfer",
@@ -643,6 +644,7 @@
   "Done...": "Tamamlandı...",
   "You have received 100 DGC points !": "100 DGC puanı aldınız!",
   "Failed to received reward": "Ödül alma işlemi başarısız oldu.",
+  "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Clockin ödülleri yalnızca 24 saatlik bir süre içinde bir kez alınabilir, daha sonra deneyebilirsiniz.",
   "You Rewards History not found": "Ödül geçmişiniz bulunamadı.",
   "Try again": "Tekrar deneyin",
   "Time expired, try again": "Süre doldu, tekrar deneyin",
@@ -671,7 +673,7 @@
   "Singapore": "Singapur",
   "Korea": "Kore",
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Erişim düğümü belirli bir bölgede yer alırken, varsayılan olarak aynı bölgedeki GPU hesaplama düğümlerine öncelikli olarak bağlanır, gecikmeyi azaltır ve performansı artırır.",
-  "Download DeGPTto obtain rewards": "Ödüller almak için DeGPT'yi indirin.",
+  "Download DeGPT to obtain rewards": "Ödüller almak için DeGPT'yi indirin.",
   "Switch Models": "Model Değiştir",
   "Suitable for most tasks": "Çoğu görev için uygundur",
   "Support image recognition": "Görüntü tanıma desteği sağlar",
