--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -597,6 +597,7 @@
   "Failed to obtain authorization information.": "Không thể lấy thông tin ủy quyền.",
   "Authorization failed!": "Thất bại trong ủy quyền!",
   "Please log in to the third party of the platform to confirm the authorization.": "Vui lòng đăng nhập vào bên thứ ba của nền tảng để xác nhận ủy quyền.",
+  "Please open the mobile app and approve the transaction request.": "Vui lòng mở ứng dụng trên điện thoại và chấp thuận yêu cầu giao dịch.",
   "Wallet Address": "Địa chỉ ví",
   "Wallet Balance": "Số dư ví",
   "Transfer": "Chuyển tiền",
@@ -643,6 +644,7 @@
   "Done...": "Đã hoàn thành...",
   "You have received 100 DGC points !": "Bạn đã nhận được 100 điểm DGC!",
   "Failed to received reward": "Không thể nhận thưởng được.",
+  "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "Phần thưởng đăng nhập chỉ có thể được nhận một lần trong thời gian 24 giờ, bạn có thể thử lại sau.",
   "You Rewards History not found": "Lịch sử thưởng của bạn không được tìm thấy.",
   "Try again": "Coba lagi",
   "Time expired, try again": "Waktu sudah habis, coba lagi",
@@ -671,7 +673,7 @@
   "Singapore": "Singapore",
   "Korea": "Hàn Quốc",
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Khi một nút truy cập nằm trong một khu vực cụ thể, nó sẽ ưu tiên kết nối đến các nút tính toán GPU trong cùng khu vực đó theo mặc định, giảm độ trễ và nâng cao hiệu suất.",
-  "Download DeGPTto obtain rewards": "Tải xuống DeGPT để nhận phần thưởng.",
+  "Download DeGPT to obtain rewards": "Tải xuống DeGPT để nhận phần thưởng.",
   "Switch Models": "Chuyển đổi mô hình",
   "Suitable for most tasks": "Thích hợp cho hầu hết các nhiệm vụ",
   "Support image recognition": "Hỗ trợ nhận dạng hình ảnh",
