--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -576,6 +576,7 @@
   "Failed to obtain authorization information.": "获取授权信息失败。",
   "Authorization failed!": "授权失败！",
   "Please log in to the third party of the platform to confirm the authorization.": "请前往登录平台的第三方进行确认授权。",
+  "Please open the mobile app and approve the transaction request.": "请打开手机应用程序并批准交易请求。",
   "Upload a GGUF model": "上传一个 GGUF 模型",
   "Upload files": "上传文件",
   "Upload Progress": "上传进度",
@@ -642,6 +643,7 @@
   "Done...": "完成...",
   "You have received 100 DGC points !": "您已收到 100 个 DGC 积分！",
   "Failed to received reward": "未能领取奖励",
+  "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "打卡奖励在 24 小时内只能获取一次，您可以稍后再试。",
   "You Rewards History not found": "未找到您的奖励记录",
   "Try again": "再试一次",
   "Time expired, try again": "时间已过期，请再试一次",
@@ -670,7 +672,7 @@
   "Singapore": "新加坡",
   "Korea": "韩国",
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "当接入节点位于某个特定区域时，其默认优先连接至同区域 的GPU计算节点，降低延迟，提升性能。",
-  "Download DeGPTto obtain rewards": "下载 DeGPT 以便获得奖励",
+  "Download DeGPT to obtain rewards": "下载 DeGPT 以便获得奖励",
   "Switch Models": "切换模型",
   "Suitable for most tasks": "适用于大多数任务",
   "Support image recognition": "支持图片识别",
