--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -597,6 +597,7 @@
   "Failed to obtain authorization information.": "",
   "Authorization failed!": "",
   "Please log in to the third party of the platform to confirm the authorization.": "",
+  "Please open the mobile app and approve the transaction request.": "",
   "Wallet Address": "",
   "Wallet Balance": "",
   "Transfer": "",
@@ -643,6 +644,7 @@
   "Done...": "",
   "You have received 100 DGC points !": "",
   "Failed to received reward": "",
+  "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "",
   "You Rewards History not found": "",
   "Try again": "",
   "Time expired, try again": "",
@@ -671,7 +673,7 @@
   "Singapore": "",
   "Korea": "",
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "",
-  "Download DeGPTto obtain rewards": "",
+  "Download DeGPT to obtain rewards": "",
   "Switch Models": "",
   "Suitable for most tasks": "",
   "Support image recognition": "",
