--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -597,6 +597,7 @@
   "Failed to obtain authorization information.": "Falha ao obter informações de autorização.",
   "Authorization failed!": "A autorização falhou!",
   "Please log in to the third party of the platform to confirm the authorization.": "Por favor, faça login na terceira parte da plataforma para confirmar a autorização.",
+  "Please open the mobile app and approve the transaction request.": "Por favor, abra o aplicativo móvel e aprove a solicitação de transação.",
   "Wallet Address": "Endereço da carteira",
   "Wallet Balance": "Saldo da carteira",
   "Transfer": "Transferir",
@@ -643,6 +644,7 @@
   "Done...": "Concluído...",
   "You have received 100 DGC points!": "Você recebeu 100 pontos DGC!",
   "Failed to received reward": "Falha ao receber a recompensa",
+  "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "As recompensas de clockin só podem ser obtidas uma vez em um período de 24 horas. Você pode tentar mais tarde.",
   "You Rewards History not found": "Histórico de suas recompensas não encontrado",
   "Try again": "Tente novamente",
   "Time expired, try again": "O tempo expirou, tente novamente",
@@ -671,7 +673,7 @@
   "Singapore": "Cingapura",
   "Korea": "Coreia",
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "Quando um nó de acesso estiver localizado em uma região específica, ele se conectará preferencialmente, por padrão, aos nós de computação GPU da mesma região, reduzindo a latência e melhorando o desempenho.",
-  "Download DeGPTto obtain rewards": "Faça o download do DeGPT para obter recompensas.",
+  "Download DeGPT to obtain rewards": "Faça o download do DeGPT para obter recompensas.",
   "Switch Models": "Mudar modelos",
   "Suitable for most tasks": "Apropriado para a maioria das tarefas",
   "Support image recognition": "Suporte para o reconhecimento de imagens",
