--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -596,6 +596,7 @@
   "Failed to obtain authorization information.": "ไม่สามารถรับข้อมูลการอนุญาตได้",
   "Authorization failed!": "การอนุญาตล้มเหลว!",
   "Please log in to the third party of the platform to confirm the authorization.": "กรุณาเข้าสู่ระบบของบุคคลที่สามของแพลตฟอร์มเพื่อยืนยันการอนุญาต.",
+  "Please open the mobile app and approve the transaction request.": "กรุณาเปิดแอปพลิเคชันมือถือและอนุมัติคำขอธุรกรรม",
   "Wallet Address": "ที่อยู่กระเป๋าเงิน",
   "Wallet Balance": "ยอดเงินในกระเป๋าเงิน",
   "Transfer": "โอน",
@@ -642,6 +643,7 @@
   "Done...": "เสร็จแล้ว...",
   "You have received 100 DGC points !": "คุณได้รับแต้ม DGC 100 แต้ม!",
   "Failed to received reward": "ไม่สามารถรับรางวัลได้",
+  "Clockin rewards can only be obtained once within a 24-hour period，you can try later.": "รางวัลจากการคล็อกอินสามารถได้รับเพียงครั้งเดียวในช่วงเวลา 24 ชั่วโมงเท่านั้น คุณสามารถลองอีกครั้งในภายหลังได้",
   "You Rewards History not found": "ไม่พบประวัติการรับรางวัลของคุณ",
   "Try again": "ลองใหม่",
   "Time expired, try again": "เวลาถึงกำหนดแล้ว,ลองใหม่",
@@ -670,7 +672,7 @@
   "Singapore": "สิงคโปร์",
   "Korea": "เกาหลี",
   "When an access node is located in a specific region, it will by default preferentially connect to GPU computing nodes within the same region, reducing latency and enhancing performance.": "เมื่อโหนดการเข้าถึงตั้งอยู่ในพื้นที่เฉพาะบางแห่ง โหนดจะเชื่อมต่อกับโหนดคำนวณ GPU ในพื้นที่เดียวกันโดยค่าเริ่มต้นในลำดับความสำคัญ เพื่อลดความล่าช้าและเพิ่มประสิทธิภาพ",
-  "Download DeGPTto obtain rewards": "ดาวน์โหลด DeGPT เพื่อรับรางวัล",
+  "Download DeGPT to obtain rewards": "ดาวน์โหลด DeGPT เพื่อรับรางวัล",
   "Switch Models": "สลับแบบจำลอง",
   "Suitable for most tasks": "เหมาะสำหรับงานส่วนใหญ่",
   "Support image recognition": "รองรับการจำแนกภาพ",
