更新 升级 进度 和 UI 样式 以及升级提示语 和 email 拼写错误

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -78,7 +78,7 @@
   "Attention to detail": "Aufmerksamkeit auf Details",
   "Audio": "Audio",
   "August": "August",
-  "Authenticated eamil address:": "Authentifizierte E-Mail-Adresse:",
+  "Authenticated email address:": "Authentifizierte E-Mail-Adresse:",
   "Authenticated wallet address:": "Authentifizierte Wallet-Adresse:",
   "Auto-playback response": "Automatische Wiedergabe-Antwort",
   "Auto-send input after 3 sec.": "Nach 3 Sekunden automatisch Eingabe senden",
