--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -78,7 +78,7 @@
   "Attention to detail": "",
   "Audio": "",
   "August": "",
-  "Authenticated eamil address:": "",
+  "Authenticated email address:": "",
   "Authenticated wallet address:": "",
   "Auto-playback response": "",
   "Auto-send input after 3 sec.": "",
