--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -78,7 +78,7 @@
   "Attention to detail": "Atención a los detalles",
   "Audio": "Audio",
   "August": "Agosto",
-  "Authenticated eamil address:": "Dirección de correo electrónico autenticada:",
+  "Authenticated email address:": "Dirección de correo electrónico autenticada:",
   "Authenticated wallet address:": "Dirección de billetera autenticada:",
   "Auto-playback response": "Respuesta de reproducción automática",
   "Auto-send input after 3 sec.": "Enviar entrada automáticamente después de 3 segundos",
