--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -78,7 +78,7 @@
   "Attention to detail": "Attention aux détails",
   "Audio": "Audio",
   "August": "Août",
-  "Authenticated eamil address:": "Adresse e-mail authentifiée:",
+  "Authenticated email address:": "Adresse e-mail authentifiée:",
   "Authenticated wallet address:": "Adresse de portefeuille authentifiée:",
   "Auto-playback response": "Réponse de lecture automatique",
   "Auto-send input after 3 sec.": "Envoyer automatiquement l'entrée après 3 secondes",
