--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -78,7 +78,7 @@
   "Attention to detail": "Perhatian terhadap detail",
   "Audio": "Audio",
   "August": "Agustus",
-  "Authenticated eamil address:": "Alamat email yang diautentikasi:",
+  "Authenticated email address:": "Alamat email yang diautentikasi:",
   "Authenticated wallet address:": "Alamat dompet yang diautentikasi:",
   "Auto-playback response": "Respon pemutaran otomatis",
   "Auto-send input after 3 sec.": "Kirim input secara otomatis setelah 3 detik.",
