--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -78,7 +78,7 @@
   "Attention to detail": "세부사항에 주의",
   "Audio": "오디오",
   "August": "8월",
-  "Authenticated eamil address:": "인증된 이메일 주소:",
+  "Authenticated email address:": "인증된 이메일 주소:",
   "Authenticated wallet address:": "인증된 지갑 주소:",
   "Auto-playback response": "자동 재생 응답",
   "Auto-send input after 3 sec.": "3초 후에 자동으로 입력 전송",
@@ -392,7 +392,7 @@
   "Plus": "플러스",
   "Positive attitude": "긍정적인 태도",
   "Previous 30 days": "이전 30일",
-  "Pricing": "가격 책정",
+  "Pricing": "가격",
   "Prompt (e.g. Tell me a fun fact about the Roman Empire)": "프롬프트(예: 로마 제국에 관한 재미있는 사실을 알려주세요)",
   "Prompt Content": "프롬프트 내용",
   "Prompt suggestions": "프롬프트 제안",
