--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -78,7 +78,7 @@
   "Attention to detail": "Atenção aos detalhes",
   "Audio": "Áudio",
   "August": "Agosto",
-  "Authenticated eamil address:": "Endereço de e-mail autenticado:",
+  "Authenticated email address:": "Endereço de e-mail autenticado:",
   "Authenticated wallet address:": "Endereço de carteira autenticado:",
   "Auto-playback response": "Resposta de reprodução automática",
   "Auto-send input after 3 sec.": "Enviar entrada automaticamente após 3 segundos",
