--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -78,7 +78,7 @@
   "Attention to detail": "Внимание к деталям",
   "Audio": "Аудио",
   "August": "Август",
-  "Authenticated eamil address:": "Аутентифицированный адрес электронной почты:",
+  "Authenticated email address:": "Аутентифицированный адрес электронной почты:",
   "Authenticated wallet address:": "Аутентифицированный адрес кошелька:",
   "Auto-playback response": "Автоматическое воспроизведение ответа",
   "Auto-send input after 3 sec.": "Автоматически отправить ввод через 3 секунды",
