--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -78,7 +78,7 @@
   "Attention to detail": "ใส่ใจในรายละเอียด",
   "Audio": "เสียง",
   "August": "สิงหาคม",
-  "Authenticated eamil address:": "ที่อยู่อีเมลที่ได้รับการยืนยัน:",
+  "Authenticated email address:": "ที่อยู่อีเมลที่ผ่านการยืนยันตัวตนแล้ว:",
   "Authenticated wallet address:": "ที่อยู่กระเป๋าเงินที่ได้รับการยืนยัน:",
   "Auto-playback response": "การตอบกลับแบบเล่นอัตโนมัติ",
   "Auto-send input after 3 sec.": "ส่งอินพุตอัตโนมัติหลังจาก 3 วินาที",
