--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -78,7 +78,7 @@
   "Attention to detail": "Detaylara Dikkat",
   "Audio": "Ses",
   "August": "Ağustos",
-  "Authenticated eamil address:": "Doğrulanmış e-posta adresi:",
+  "Authenticated email address:": "Doğrulanmış e-posta adresi:",
   "Authenticated wallet address:": "Doğrulanmış cüzdan adresi:",
   "Auto-playback response": "Otomatik oynatma yanıtı",
   "Auto-send input after 3 sec.": "3 saniye sonra otomatik olarak girdi gönder",
