--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -78,7 +78,7 @@
   "Attention to detail": "Để ý đến chi tiết",
   "Audio": "Âm thanh",
   "August": "Tháng 8",
-  "Authenticated eamil address:": "Địa chỉ email đã xác thực:",
+  "Authenticated email address:": "Địa chỉ email đã xác thực:",
   "Authenticated wallet address:": "Địa chỉ ví đã xác thực:",
   "Auto-playback response": "Phản hồi tự động phát lại",
   "Auto-send input after 3 sec.": "Gửi đầu vào tự động sau 3 giây.",
