--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -62,7 +62,7 @@
   "Audio": "音频",
   "August": "八月",
   "Authed KYC": "已认证KYC",
-  "Authenticated eamil address:": "已认证的电子邮件地址：",
+  "Authenticated email address:": "已认证的电子邮件地址：",
   "Authenticated wallet address:": "已认证的钱包地址：",
   "Auto-playback response": "自动播放回复",
   "Auto-send input after 3 sec.": "3 秒后自动发送输入内容",
@@ -407,7 +407,7 @@
   "Positive attitude": "积极的态度",
   "Previous 30 days": "前 30 天",
   "Previous 7 days": "前 7 天",
-  "Pricing": "价格制定",
+  "Pricing": "价格",
   "Profile Image": "个人资料图片；头像",
   "Prompt": "提示",
   "Prompt (e.g. Tell me a fun fact about the Roman Empire)": "提示（例如：告诉我一个关于罗马帝国的有趣事实）",
