--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -78,7 +78,7 @@
   "Attention to detail": "細部への注意",
   "Audio": "オーディオ",
   "August": "8 月",
-  "Authenticated eamil address:": "認証済みのメールアドレス：",
+  "Authenticated email address:": "認証済みのメールアドレス：",
   "Authenticated wallet address:": "認証済みのウォレットアドレス：",
   "Auto-playback response": "自動再生応答",
   "Auto-send input after 3 sec.": "3 秒後に入力を自動送信する",
@@ -393,7 +393,7 @@
   "Plus": "プラス；追加；優先",
   "Positive attitude": "前向きな態度",
   "Previous 30 days": "過去 30 日間",
-  "Pricing": "価格設定；料金体系",
+  "Pricing": "価格",
   "Prompt (e.g. Tell me a fun fact about the Roman Empire)": "プロンプト（例：ローマ帝国に関する面白い事実を教えてください）",
   "Prompt Content": "プロンプトの内容",
   "Prompt suggestions": "プロンプトの提案",
