添加 调试 按钮

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -625,6 +625,7 @@
   "Settings": "Einstellungen",
   "General": "Allgemein",
   "Account": "Konto",
+  "Statistics": "Statistik",
   "WebUI Settings": "WebUI-Einstellungen",
   "Theme": "Thema",
   "System": "System",
