--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -625,6 +625,7 @@
   "Settings": "",
   "General": "",
   "Account": "",
+  "Statistics": "",
   "WebUI Settings": "",
   "Theme": "",
   "System": "",
