--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -625,6 +625,7 @@
   "Settings": "Ajustes",
   "General": "General",
   "Account": "Cuenta",
+  "Statistics": "Estadísticas",
   "WebUI Settings": "Ajustes de la interfaz web",
   "Theme": "Tema",
   "System": "Sistema",
