--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -624,6 +624,7 @@
   "Settings": "Paramètres",
   "General": "Général",
   "Account": "Compte",
+  "Statistics": "Statistiques",
   "WebUI Settings": "Paramètres de l'interface web",
   "Theme": "Thème",
   "System": "Système",
