--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -625,6 +625,7 @@
   "Settings": "Pengaturan",
   "General": "Umum",
   "Account": "Akun",
+  "Statistics": "Statistik",
   "WebUI Settings": "Pengaturan WebUI",
   "Theme": "Tema",
   "System": "Sistem",
