--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -627,6 +627,7 @@
   "Settings": "設定",
   "General": "一般",
   "Account": "アカウント",
+  "Statistics": "とうけい",
   "WebUI Settings": "WebUI 設定",
   "Theme": "テーマ",
   "System": "システム",
