--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -625,6 +625,7 @@
   "Settings": "설정",
   "General": "일반",
   "Account": "계정",
+  "Statistics": "통계",
   "WebUI Settings": "웹UI 설정",
   "Theme": "테마",
   "System": "시스템",
