--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -625,6 +625,7 @@
   "Settings": "Configurações",
   "General": "Geral",
   "Account": "Conta",
+  "Statistics": "Estatísticas",
   "WebUI Settings": "Configurações da interface web",
   "Theme": "Tema",
   "System": "Sistema",
