--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -624,6 +624,7 @@
   "Settings": "Настройки",
   "General": "Общие",
   "Account": "Аккаунт",
+  "Statistics": "Статистика",
   "WebUI Settings": "Настройки веб-интерфейса",
   "Theme": "Тема",
   "System": "Система",
