--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -624,6 +624,7 @@
   "Settings": "การตั้งค่า",
   "General": "ทั่วไป",
   "Account": "บัญชี",
+  "Statistics": "สถิติ",
   "WebUI Settings": "การตั้งค่า WebUI",
   "Theme": "ธีม",
   "System": "ระบบ",
