--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -625,6 +625,7 @@
   "Settings": "Ayarlar",
   "General": "Genel",
   "Account": "Hesap",
+  "Statistics": "İstatistik",
   "WebUI Settings": "WebUI Ayarları",
   "Theme": "Tema",
   "System": "Sistem",
