--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -625,6 +625,7 @@
   "Settings": "Cài đặt",
   "General": "Chung",
   "Account": "Tài khoản",
+  "Statistics": "Thống kê",
   "WebUI Settings": "Cài đặt WebUI",
   "Theme": "Giao diện",
   "System": "Hệ thống",
