--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -11,6 +11,7 @@
   "Access on web, iOS, Android": "可在网页、iOS、安卓设备上访问",
   "Access to ": "可访问 ",
   "Account": "账户",
+  "Statistics": "统计",
   "Accurate information": "准确信息",
   "Add": "添加",
   "Add a model": "添加一个模型",
