--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -683,6 +683,8 @@
   "You can select up to four models at most.": "",
   "Your friend not complete the KYC verification.": "",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "",
+  "Total": "",
+  "Third registration": "",
   "I. New User Creation Reward": "",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
   "II. Referral Reward": "",
