--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -682,6 +682,8 @@
   "You can select up to four models at most.": "Vous pouvez sélectionner jusqu'à quatre modèles au maximum.",
   "Your friend not complete the KYC verification.": "Votre ami n'a pas terminé la vérification KYC.",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "Le KeyStore a été téléchargé automatiquement. Si nécessaire, vous pouvez télécharger le JSON manuellement ou copier la clé privée.",
+  "Total": "Total",
+  "Third registration": "Enregistrement tiers",
   "I. New User Creation Reward": "I. Récompense pour la création d'un nouvel utilisateur",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Après avoir effectué l'authentification du nouvel utilisateur, recevez une récompense de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Récompense pour la recommandation",
