--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -683,6 +683,8 @@
   "You can select up to four models at most.": "Puede seleccionar hasta cuatro modelos como máximo.",
   "Your friend not complete the KYC verification.": "Tu amigo no ha completado la verificación KYC.",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "El KeyStore se ha descargado automáticamente. Si es necesario, puede descargar JSON manualmente o copiar la clave privada.",
+  "Total": "Total",
+  "Third registration": "Registro de terceros",
   "I. New User Creation Reward": "I. Recompensa por la Creación de un Nuevo Usuario",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Después de completar la autenticación del nuevo usuario, recibe una recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Recomendación",
